# GhostKnight

./: .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  Player.cpp  Player.hpp  gameTexture (1).pixil  gameTexture.pixil  gameTextureSave.pixil  main.cpp
.res/img/: Enemies.png~  Player.png~
game/: game.hpp
game/gameState/: Game.cpp  Game.hpp  Player.cpp  Player.hpp  map.cpp  map.hpp  weapon.cpp  weapon.hpp  weaponManager.cpp  weaponManager.hpp
game/gameState/Enemies/: Enemies.cpp  Enemies.hpp  Monster.cpp  Monster.hpp  Turret.cpp  Turret.hpp
game/ge/: ge.hpp
game/ge/.res/img/: Enemies.png~  mainTexture.png~  texture.config
game/ge/Animation/: Animation.hpp
game/ge/resource/: texture.hpp
game/ge/state/: state.hpp
game/ge/tools/: angles.hpp  collisions.hpp  tools.hpp
game/menuState/: menu.cpp  menu.hpp
